[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "algorithms"
version = "0.0.0"
description = "Self-implemented data structures and spectral clustering inspired by academic topics; consolidated into a single Python package for easy review."
readme = "README.md"
requires-python = ">=3.10"
authors = []
dependencies = ["numpy>=1.24"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["algorithms*"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
